--- a/index.html
+++ b/index.html
@@ -35,5 +35,7 @@
 		<h2>Weekly Reflections</h2>
 		<h3>Week 1</h3>
 		<p>The first week was kind of stressful and overwhelming. Topics in MySQL quickly went over my head and I feel like I have a lot of catching up to do just to keep up. Brent and Chloe have been helpful, although I may have to ask about getting a technical coach soon.</p>
+		<h3>Week 2<h3>
+		<p>Week two was basically just me being confused and stressed about PHP and OOP assignments. Everyone's generally ahead of me and it's hard to catch up. Unable to get sleep a couple of nights and had a hard time retaining info and keeping up. Told Karen that I'll need a technical coach soon. Already over it.</p>
 	</body>
 </html>
